# RustTeg

./: Cargo.toml  idea.md
client/elm-stuff/0.19.1/: Main.elmi  Main.elmo  Messages.elmi  Messages.elmo  Model.elmi  Model.elmo  Teg.elmi  Teg.elmo  Update.elmi  Update.elmo  View.elmi  View.elmo
client/src/: Main.elm  Messages.elm  Model.elm  Teg.elm  Update.elm  View.elm
server/: Cargo.toml  Rocket.toml
server/src/: main.rs
src/: action.rs  card.rs  game.rs  lib.rs  main.rs  map.rs  objective.rs  player.rs  round.rs  war.rs
www/: index.html  index.js  package-lock.json  package.json
