[package]
name = "rusteg"
version = "0.1.0"
authors = ["QPotato"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
itertools = "0.9.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
serde = { version = "^1.0.59", features = ["rc", "derive"] }
serde_derive = "^1.0.59"
serde_json = "^1.0"

[dependencies.wasm-bindgen]
version = "=0.2.34"
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
